test/lexer/error/err_14_illegal_char_at.pl0
var x; begin x := @; end